@@ -1,0 +1,32 @@
+# Server-side
+<reply>
+</reply>
+
+# Client-side
+<client>
+<server>
+ftp
+</server>
+ <name>
+FTP transient error, retry request once
+ </name>
+ <command>
+ftp://%HOSTIP:%FTPPORT/196 --retry 1
+</command>
+<file name="log/ftpserver.cmd">
+REPLY PASS 530 temporarily not available
+</file>
+</test>
+
+# Verify data after the test has been "shot"
+<verify>
+<errorcode>
+10
+</errorcode>
+<protocol>
+USER anonymous
+PASS curl_by_daniel@haxx.se
+USER anonymous
+PASS curl_by_daniel@haxx.se
+</protocol>
+</verify>
